# jobscout

./: .gitignore  DEPLOYMENT.md
.github/workflows/: jobscout.yml
crewai-agent/: README.md  pyproject.toml
crewai-agent/knowledge/: user_preference.txt
crewai-agent/src/jobscout/: crew.py  main.py
crewai-agent/src/jobscout/config/: agents.yaml  tasks.yaml
crewai-agent/src/jobscout/tools/: __init__.py  job_search_tools.py  publisher_tool.py  resume_tool.py
data/: jobs.json
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/trigger/: route.ts
frontend/components/: FilterBar.tsx  JobCard.tsx  JobList.tsx  StatusBanner.tsx
frontend/lib/: jobs.ts  load-jobs.ts  types.ts
